src/snapshots/monkey_rust__lexer__tests__next_token_keywords_with_symbols.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Let,
    Identifier(
        "five",
    ),
    Assign,
    Integer(
        "5",
    ),
    Semicolon,
    Let,
    Identifier(
        "ten",
    ),
    Assign,
    Integer(
        "10",
    ),
    Semicolon,
    Let,
    Identifier(
        "add",
    ),
    Assign,
    Function,
    LeftParen,
    Identifier(
        "x",
    ),
    Comma,
    Identifier(
        "y",
    ),
    RightParen,
    LeftBrace,
    Identifier(
        "x",
    ),
    Plus,
    Identifier(
        "y",
    ),
    Semicolon,
    RightBrace,
    Semicolon,
    Let,
    Identifier(
        "result",
    ),
    Assign,
    Identifier(
        "add",
    ),
    LeftParen,
    Identifier(
        "five",
    ),
    Comma,
    Identifier(
        "ten",
    ),
    RightParen,
    Semicolon,
    Bang,
    Minus,
    Slash,
    Asterisk,
    Integer(
        "5",
    ),
    Semicolon,
    Integer(
        "5",
    ),
    LessThan,
    Integer(
        "10",
    ),
    GreaterThan,
    Integer(
        "5",
    ),
    Semicolon,
]
