src/snapshots/monkey_rust__lexer__tests__next_token_simple_symbols.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Assign,
    Plus,
    LeftParen,
    RightParen,
    LeftBrace,
    RightBrace,
    Comma,
    Semicolon,
]
